--- a/week2/amazumda/Makefile
+++ b/week2/amazumda/Makefile
@@ -2,3 +2,6 @@ CFLAGS=-ansi -g -Wall -Werror -Wextra -Wformat=2 -Wjump-misses-init -Wlogical-op
 
 tcp: tcp.c
         cc tcp.c -o tcp $(CFLAGS)
+
+tcpm: tcpm.c
+	cc tcpm.c -o tcpm $(CFLAGS)
